# reflex-realworld-example

./: .gitignore  LICENSE  README.md  TODO.org  data.sql  db.sql  default.nix  hie.yaml
.obelisk/impl/: default.nix  default.nix.bak  github.json
backend/: backend.cabal
backend/src/: Backend.hs  SetCookieOrphan.hs
backend/src/Backend/: Conduit.hs
backend/src/Backend/Conduit/: Claim.hs  Database.hs  Errors.hs  Validation.hs
backend/src/Backend/Conduit/Database/: Articles.hs  Comments.hs  Tags.hs  Users.hs
backend/src/Backend/Conduit/Database/Articles/: Article.hs  ArticleTag.hs  Favorite.hs
backend/src/Backend/Conduit/Database/Comments/: Comment.hs
backend/src/Backend/Conduit/Database/Tags/: Tag.hs
backend/src/Backend/Conduit/Database/Users/: Follow.hs  User.hs
backend/src/Database/Beam/Postgres/: Extended.hs
common/: common.cabal  shell.nix
common/src/Common/: Route.hs
common/src/Common/Conduit/: Api.hs
common/src/Common/Conduit/Api/: Articles.hs  Attribute.hs  Errors.hs  Namespace.hs  Profile.hs  Profiles.hs  Tags.hs  User.hs  Users.hs  Validation.hs
common/src/Common/Conduit/Api/Articles/: Article.hs  Articles.hs  Attributes.hs  Comment.hs  CreateComment.hs
common/src/Common/Conduit/Api/Profiles/: Profile.hs
common/src/Common/Conduit/Api/User/: Account.hs  Profile.hs  Update.hs
common/src/Common/Conduit/Api/Users/: Credentials.hs  Registrant.hs
common/src/RealWorld/Conduit/: Api.hs
common/src/RealWorld/Conduit/Api/: Articles.hs  Attribute.hs  Namespace.hs  Profile.hs  User.hs  Users.hs
common/src/RealWorld/Conduit/Api/Articles/: Article.hs  Articles.hs  Attributes.hs  Comment.hs  CreateComment.hs
common/src/RealWorld/Conduit/Api/User/: Account.hs  Profile.hs  Update.hs
common/src/RealWorld/Conduit/Api/Users/: Account.hs  Credentials.hs  Registrant.hs
config/backend/: jwtKey  pgConnStr
dep/: dep.nix
dep/megaparsec/: update.sh
dep/mmark/: default.nix  git.json
dep/modern-uri/: default.nix  git.json  update.sh
dep/neat-interpolation/: default.nix
dep/reflex-dom-storage/: default.nix  git.json  update.sh
dep/servant-auth/: default.nix  git.json  update.sh
dep/servant-reflex/: default.nix  git.json
dep/servant-snap/: default.nix  git.json  update.sh
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src/Frontend/: Article.hs  ArticlePreview.hs  Editor.hs  FrontendStateT.hs  Head.hs  HomePage.hs  LocalStorageKey.hs  Login.hs  Nav.hs  Profile.hs  Register.hs  Settings.hs  Utils.hs
frontend/src/Frontend/Conduit/: Client.hs
frontend/src/Frontend/Conduit/Client/: Internal.hs
frontend/src/RealWorld/Conduit/: Client.hs
nix/: dep.nix
nix/entropy/: default.nix  git.json  update.sh
nix/megaparsec/: default.nix  git.json
nix/mmark/: git.json  update.sh
nix/neat-interpolation/: git.json  update.sh
nix/reflex-dom-storage/: git.json  update.sh
nix/servant-reflex/: git.json  update.sh
static/: main.css
