name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , beam-core
               , beam-postgres
               , common
               , frontend
               , obelisk-backend
               , obelisk-route
               , postgresql-simple
               , resource-pool
               , scrypt
               , servant-auth-snap
               , servant-snap
               , validation
  exposed-modules:
    Backend
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
