name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , insert-ordered-containers
               , lens
               , mtl
               , servant
               , servant-auth
               , text

  exposed-modules:
    Common.Api
    Common.Route
