name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , containers
               , dependent-sum
               , lens
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , text
               , servant
               , servant-client-core
               , reflex-dom-storage
               , servant-reflex
  exposed-modules:
      Frontend
    , Frontend.Article
    , Frontend.ArticlePreview
    , Frontend.Editor
    , Frontend.HomePage
    , Frontend.Login
    , Frontend.Nav
    , Frontend.Profile
    , Frontend.Register
    , Frontend.Settings
    , Frontend.Utils

  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
